<resources>

    <string name="app_name">SpeechToTextDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="speak">Speak Now</string>
    <string name="listen">Listen</string>
    <string name="descriptionObjectTitle">Description:</string>
    <string name="priceObjectTitle">Price:</string>
    
    <string name="capturedImage">captured image</string>
    <string name="loadImage">image laden</string>
    <string name="scanBarcode">scan</string>
    <string name="location">Location</string>
    <string name="my_location">my location</string>
    <string name="barcode">Barcode scan</string>
    <string name="imageTitle">Image 2 text</string>
    <string name="accounts">Accounts</string>
    <string name="profile">Profile</string>
    
    
</resources>