<?xml version="1.0" encoding="utf-8"?>

<!-- 
xmlns:bind="http://robobinding.org/android"
	to disable erros due to other namesapces than Android
	disable rule in preferecens / Android / Lint error checking
		search for "missingprefix"
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://robobinding.org/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:scrollbars="horizontal" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/descriptionObjectTitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/btnSpeakDescription"
                style="@style/AppTheme"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:contentDescription="@string/speak"
                android:src="@android:drawable/ic_btn_speak_now" />

            <EditText
                android:id="@+id/descriptionField"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:imeOptions="normal"
                android:inputType="textCapWords" />

            <ImageButton
                android:id="@+id/btnListenDescription"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/listen"
                android:src="@drawable/ic_action_volume_on" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/priceObjectTitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/btnSpeakPrice"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/speak"
                android:src="@android:drawable/ic_btn_speak_now" />

            <EditText
                android:id="@+id/priceField"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned" />

            <ImageButton
                android:id="@+id/btnListenPrice"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/listen"
                android:src="@drawable/ic_action_volume_on" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textImageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageTitle"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
	            
	            <ImageButton
	                android:id="@+id/btnCapture"
	                style="@style/AppTheme"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/capturedImage"
	                android:onClick="onClick_buttonCapture"
	                android:src="@drawable/ic_action_camera" />
	
	            <ImageButton
	                android:id="@+id/btnLoad"
	                style="@style/AppTheme"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:contentDescription="@string/loadImage"
	                android:onClick="onClick_buttonLoad"
	                android:src="@drawable/ic_action_picture" />
			</LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textKeywords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/capturedImage" />
                
                <TextView
                    android:id="@+id/similarKeywords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
                
                </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textBarcodeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/btnScan"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scanBarcode"
                android:onClick="onClick_buttonScan"
                android:src="@drawable/ic_action_cloud" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textBarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/textBarcodeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textCurrentLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/btnCurrentLocation"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location"
                android:onClick="onClick_CurrentLocation"
                android:src="@drawable/ic_action_place" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textCurrentLocation_Longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0" />

                <TextView
                    android:id="@+id/textCurrentLocation_Latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0" />

                <TextView
                    android:id="@+id/textCurrentLocation_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="no address" />

                <TextView
                    android:id="@+id/textCurrentLocation_zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="no zip" />

                <TextView
                    android:id="@+id/textCurrentLocation_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="no city" />

                <TextView
                    android:id="@+id/textCurrentLocation_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="no country" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textAccountsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accounts"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textNofAccounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textAccounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textProfileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textProfileEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        </TableLayout>

</ScrollView>